@@ -1,4 +1,5 @@
 4.1.5
+ * Fix system_views.settings to handle array types (CASSANDRA-19475)
 Merged from 4.0:
  * Push LocalSessions info logs to debug (CASSANDRA-18335)
  * Filter remote DC replicas out when constructing the initial replica plan for the local read repair (CASSANDRA-19120)
